會員登入email驗證提示修改、各頁form標籤移除、 部分標題修改

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -159,8 +159,8 @@
                 <li class="nav-item dropdown">
                     <span class="nav-link dropdown-toggle" data-toggle="dropdown">認養毛孩</span>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="/public_shelter">公立領養</a>
-                        <a class="dropdown-item" href="/personal_shelter">一般領養</a>
+                        <a class="dropdown-item" href="/public_shelter">收容所認養</a>
+                        <a class="dropdown-item" href="/personal_shelter">刊登認養</a>
                     </div>
                 </li>
 
@@ -174,7 +174,7 @@
                     <div class="dropdown-menu">
                         <a id="login" class="dropdown-item" href="/login_register" style="border-radius: 0 0 0.5rem 0.5rem">登入</a>
                         <a id="sign_out" class="dropdown-item" href="/sign_out" style="display: none;">登出</a>
-                        <a id="userManagement" class="dropdown-item" href="/user_management" style="display: none;">會員資料修改</a>
+                        <a id="userManagement" class="dropdown-item" href="/user_management" style="display: none;">會員資料變更</a>
                         <a id="publish" class="dropdown-item" href="/publish" style="display: none;">會員刊登送養</a>
                         <a id="userPublishHistory" class="dropdown-item" href="/user_publish_history" style="display: none;">送養資訊管理</a>
                     </div>
