--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -69,7 +69,7 @@
 <section class="ftco-section main-img" style="padding-bottom: 50px">
     <div class="container py-3">
         <div class="col-auto py-3 heading-section text-center ftco-animate">
-            <h2>領養資訊</h2>
+            <h2>認養資訊</h2>
         </div>
         <div class="row">
             <div class="col-md-4 ftco-animate">
