--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>刊登寵物 -寵物資訊平台</title>
+    <title>會員刊登送養 - 寵物資訊平台</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800&display=swap"
@@ -93,7 +93,7 @@
     <div class="overlay"></div>
     <div class="container d-flex flex-wrap" style="max-width: 1200px;">
         <div class="col-md-12 col-lg-6 half p-5 ftco-animate">
-            <h2 class="m-3">領養資料</h2>
+            <h2 class="m-3">刊登認養資料</h2>
             <div class="row">
                 <div class="col-md-12">
                     <div class="col-md-12">
@@ -158,7 +158,7 @@
                     </div>
                     <div class="col-md-12">
                         <div class="form-group">
-                            <button id="publishBtn" onclick="publishAnimal()" class="form-control btn btn-primary py-1 px-4">領養資料送出</button>
+                            <button id="publishBtn" onclick="publishAnimal()" class="form-control btn btn-primary py-1 px-4">送出</button>
                         </div>
                     </div>
                 </div>
