刊登認養-彈出框版面樣式製作

--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -64,8 +64,8 @@
             margin-block: auto;
         }
 
-        /*輸入框及按鈕字體加大、邊角圓弧加大*/
-        input, button {
+        /*按鈕字體加大、邊角圓弧加大*/
+        button {
             font-size: 20px !important;
             border-radius: 0.5rem !important;
         }
