--- a/src/main/resources/templates/personal_shelter.html
+++ b/src/main/resources/templates/personal_shelter.html
@@ -52,6 +52,16 @@
             opacity: 1;
         }
 
+        /*ICON自訂樣式*/
+        .fa-icon {
+            color: orange;
+            /*background: lightgrey;*/
+            /*text-align: center;*/
+            padding-top: 0.5rem;
+            /*min-width: 13%;*/
+            /*border-top-left-radius: 0.5rem !important;*/
+            /*border-bottom-left-radius: 0.5em !important;*/
+        }
         .page_show {
             /*padding: 40px 0;*/
             text-align: center;
@@ -143,55 +153,108 @@
                 </div>
             </div>
         </div>
-        <div class="modal fade bd-example-modal-lg" id="exampleModalCenter" tabindex="-1" role="dialog"
+        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
              aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-                <div class="modal-content">
+            <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
+                <div class="modal-content main-img">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
+                        <!-- 名字放在標題 -->
+                        <div class="col-4">
+                        </div>
+                        <div class="col-4 d-flex justify-content-center">
+                            <span class="fa-icon"><i class="fa fa-paw fa-2x"></i></span>
+                            <h3 class="modal-title font-weight-bold" id="animalName_static"></h3>
+                            <span class="fa-icon"><i class="fa fa-paw fa-2x"></i></span>
+                        </div>
+                        <div class="col-4 text-right">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
                     </div>
-                    <div class="modal-body">
-                        <div class="form-group">
-                            <div class="col">
-                                <img id="imageUrl_static">
-                                <label class="col-sm-2 control-label">會員編號 :</label>
-                                <label class="form-control-static" id="userId_static"></label><br>
-                                <label class="col-sm-2 control-label">動物編號 :</label>
-                                <label class="form-control-static" id="animalId_static"></label><br>
-                                <label class="col-sm-2 control-label">名字 :</label>
-                                <label class="form-control-static" id="animalName_static"></label><br>
-                                <label class="col-sm-2 control-label">物種 :</label>
-                                <label class="form-control-static" id="animalKind_static"></label><br>
-                                <label class="col-sm-2 control-label">品種 :</label>
-                                <label class="form-control-static" id="animalVariety_static"></label><br>
-                                <label class="col-sm-2 control-label">性別 :</label>
-                                <label class="form-control-static" id="animalSex_static"></label><br>
-                                <label class="col-sm-2 control-label">年齡 :</label>
-                                <label class="form-control-static" id="animalAge_static"></label><br>
-                                <label class="col-sm-2 control-label">體型 :</label>
-                                <label class="form-control-static" id="animalBodysize_static"></label><br>
-                                <label class="col-sm-2 control-label">毛色 :</label>
-                                <label class="form-control-static" id="animalColor_static"></label><br>
-                                <label class="col-sm-2 control-label">絕育 :</label>
-                                <label class="form-control-static" id="animalSterilization_static"></label><br>
-                                <label class="col-sm-2 control-label">疫苗 :</label>
-                                <label class="form-control-static" id="animalBacterin_static"></label><br>
-                                <label class="col-sm-2 control-label">地區 :</label>
-                                <label class="form-control-static" id="area_static"></label><br>
-                                <label class="col-sm-2 control-label">備註:</label>
-                                <label class="form-control-static" id="description_static"></label><br>
-                                <label class="col-sm-2 control-label">刊登日期:</label>
-                                <label class="form-control-static" id="createdDate_static"></label><br>
-                                <label class="col-sm-2 control-label">更新日期:</label>
-                                <label class="form-control-static" id="lastModifiedDate_static"></label><br>
+                    <div class="modal-body py-0">
+                        <div class="row m-auto col-12 justify-content-center">
+                            <div class="col-xl-6 col-12">
+                                <div id="imageUrl_static" class="work mb-4 img d-flex align-items-end"
+                                     style="height: 600px !important; background-position: center center !important;">
+                                </div>
+                            </div>
+                            <div class="row mx-0 col-xl-6 col-12" style="height: 100% !important;">
+                                <div class="col-4 mt-0">
+                                    <div class="d-block">
+                                        <span>會員編號 :</span>
+                                        <span id="userId_static"></span>
+                                    </div>
+                                    <div class="d-block">
+                                        <span>動物編號 :</span>
+                                        <span id="animalId_static"></span>
+                                    </div>
+                                    <div class="d-block">
+                                        <span>物種 :</span>
+                                        <span id="animalKind_static"></span>
+                                    </div>
+                                    <div class="d-block">
+                                        <span>品種 :</span>
+                                        <span id="animalVariety_static"></span>
+                                    </div>
+                                </div>
+                                <div class="col-4 mt-0">
+                                    <div class="d-block">
+                                        <span>性別 :</span>
+                                        <span id="animalSex_static"></span>
+                                    </div>
+                                    <div class="d-block">
+                                        <span>年齡 :</span>
+                                        <span id="animalAge_static"></span>
+                                    </div>
+                                    <div class="d-block">
+                                        <span>體型 :</span>
+                                        <span id="animalBodysize_static"></span>
+                                    </div>
+                                    <div class="d-block">
+                                        <span>毛色 :</span>
+                                        <span id="animalColor_static"></span>
+                                    </div>
+                                </div>
+                                <div class="col-4 mt-0">
+                                    <div class="d-block">
+                                        <span>絕育 :</span>
+                                        <span id="animalSterilization_static"></span>
+                                    </div>
+                                    <div class="d-block">
+                                        <span>疫苗 :</span>
+                                        <span id="animalBacterin_static"></span>
+                                    </div>
+                                    <div class="d-block">
+                                        <span>地區 :</span>
+                                        <span id="area_static"></span>
+                                    </div>
+                                    <div class="d-block">
+                                        <span>空</span>
+                                        <span id=""></span>
+                                    </div>
+                                </div>
+                                <!-- 備註(動物描述) -->
+                                <div class="col-12">
+                                    <div class="d-block font-weight-bold" style="color: black;">
+                                        <span id="description_static"></span>
+                                    </div>
+                                </div>
+                                <div class="col-12 d-block text-right">
+                                    <div class="px-1">
+                                        <span>刊登日期 :</span>
+                                        <span id="createdDate_static"></span>
+                                    </div>
+                                    <div class="px-1">
+                                        <span>更新日期 :</span>
+                                        <span id="lastModifiedDate_static"></span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <div class="modal-footer justify-content-center">
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">關閉</button>
                     </div>
                 </div>
             </div>
@@ -349,7 +412,8 @@
                 $("#description_static").text(data.description);
                 $("#createdDate_static").text(data.createdDate);
                 $("#lastModifiedDate_static").text(data.lastModifiedDate);
-                $("#imageUrl_static").attr("src", data.imageUrl);
+                // $("#imageUrl_static").attr("src", data.imageUrl);
+                $("#imageUrl_static").css("background-image", `url('${data.imageUrl}')`);
                 // $("animalId_static").text(data.userId);
                 // console.log("會員:" + data.userId +
                 //     "\n編號:" + data.animalId +
