--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -170,6 +170,14 @@
 
                 <!-- 下拉選單 -->
                 <li class="nav-item dropdown">
+                    <span class="nav-link dropdown-toggle" data-toggle="dropdown">政府資料</span>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="/animal_food">合法寵物食品</a>
+                    </div>
+                </li>
+
+                <!-- 下拉選單 -->
+                <li class="nav-item dropdown">
                     <span class="nav-link dropdown-toggle" data-toggle="dropdown">會員登入</span>
                     <div class="dropdown-menu">
                         <a id="login" class="dropdown-item" href="/login_register" style="border-radius: 0 0 0.5rem 0.5rem">登入</a>
