--- a/src/main/resources/templates/personal_shelter.html
+++ b/src/main/resources/templates/personal_shelter.html
@@ -62,6 +62,13 @@
             /*border-top-left-radius: 0.5rem !important;*/
             /*border-bottom-left-radius: 0.5em !important;*/
         }
+
+        /*顯示物件-滑鼠掠過顏色*/
+        .staff:hover .text, .staff:focus .text {
+            background: #81a5ff !important;
+            color: rgba(255, 255, 255, 0.8);
+        }
+
         .page_show {
             /*padding: 40px 0;*/
             text-align: center;
@@ -110,7 +117,6 @@
     <div class="container">
         <!-- 顯示搜尋條件 -->
         <div class="row p-3 m-auto ftco-animate text-center justify-content-center" id="top">
-            <!-- 篩選區 -->
             <div class="p-1">
                 <select class="custom-select" name="area" id="area">
                 </select>
@@ -139,7 +145,7 @@
         <div class="row ftco-animate">
             <div class="col-12 p-3 text-center">
                 <div class="block-27">
-                    <p id="pageInfo"></p><br>
+                    <p id="pageInfo"></p>
                     <div class="page_show"></div>
                 </div>
             </div>
@@ -159,20 +165,30 @@
                 <div class="modal-content main-img">
                     <div class="modal-header">
                         <!-- 名字放在標題 -->
-                        <div class="col-4">
+                        <div class="col-4 px-0">
                         </div>
-                        <div class="col-4 d-flex justify-content-center">
+                        <div class="col-4 px-0 d-flex justify-content-center">
                             <span class="fa-icon"><i class="fa fa-paw fa-2x"></i></span>
                             <h3 class="modal-title font-weight-bold" id="animalName_static"></h3>
                             <span class="fa-icon"><i class="fa fa-paw fa-2x"></i></span>
                         </div>
-                        <div class="col-4 text-right">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <div class="col-4 px-0">
+                            <div class="row m-0 pr-4 font-weight-bold justify-content-end" style="color: ">
+                                <span id="createdDate_static"></span>
+                                <span>&nbsp;刊登</span>
+                            </div>
+                            <div class="row m-0 pr-4 font-weight-bold justify-content-end">
+                                <span id="lastModifiedDate_static"></span>
+                                <span>&nbsp;更新</span>
+                            </div>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"
+                                    style="position: absolute !important; top: 0; right: 0; padding: 10px !important;">
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
                     </div>
-                    <div class="modal-body py-0">
+                    <div class="modal-body"
+                         style="border-top: 3px dotted grey; border-bottom: 3px dotted grey;">
                         <div class="row m-auto col-12 justify-content-center">
                             <div class="col-xl-6 col-12">
                                 <div id="imageUrl_static" class="work mb-4 img d-flex align-items-end"
@@ -235,20 +251,20 @@
                                     </div>
                                 </div>
                                 <!-- 備註(動物描述) -->
-                                <div class="col-12">
+                                <div class="col-12 pt-3">
                                     <div class="d-block font-weight-bold" style="color: black;">
                                         <span id="description_static"></span>
                                     </div>
                                 </div>
                                 <div class="col-12 d-block text-right">
-                                    <div class="px-1">
-                                        <span>刊登日期 :</span>
-                                        <span id="createdDate_static"></span>
-                                    </div>
-                                    <div class="px-1">
-                                        <span>更新日期 :</span>
-                                        <span id="lastModifiedDate_static"></span>
-                                    </div>
+                                    <!--                                    <div class="px-1">-->
+                                    <!--                                        <span>刊登日期 :</span>-->
+                                    <!--                                        <span id="createdDate_static"></span>-->
+                                    <!--                                    </div>-->
+                                    <!--                                    <div class="px-1">-->
+                                    <!--                                        <span>更新日期 :</span>-->
+                                    <!--                                        <span id="lastModifiedDate_static"></span>-->
+                                    <!--                                    </div>-->
                                 </div>
                             </div>
                         </div>
@@ -349,7 +365,7 @@
         <div class='img-wrap d-flex align-items-stretch'>
             <div class='work mb-4 img d-flex align-items-end' style='background-image: url(${item.imageUrl});'></div>
         </div>
-        <div class='text pt-3 px-3 pb-4 text-center' style='cursor: pointer;'>
+        <div class='text pt-3 px-3 pb-4 text-center'>
             <h3 id='${item.animalId}'>${item.animalName}</h3>
             <div class='faded'>
                 <p>物種: ${item.animalKind}</p>
