註冊欄位暫時修復

--- a/src/main/resources/templates/animal_discuss.html
+++ b/src/main/resources/templates/animal_discuss.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>寵物送別 - 寵物資訊平台</title>
+    <title>交流天地 - 寵物資訊平台</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800&display=swap"
@@ -118,7 +118,7 @@
                     <span><a class="text-shadow" href="/index">首頁 &gt;</a></span>
                     <span class="ion-ios-arrow-forward"></span>
                 </p>
-                <h1 class="mb-0 bread text-shadow">寵物送別</h1>
+                <h1 class="mb-0 bread text-shadow">交流天地</h1>
             </div>
         </div>
     </div>
