--- a/src/main/resources/templates/animal_food.html
+++ b/src/main/resources/templates/animal_food.html
@@ -84,6 +84,7 @@
         tr:first-child, table tr:first-child:hover {
             color: white;
             background-color: #81a5ff !important;
+            /*轉場-淡入淡出效果*/
             transition: background-color 0.35s ease-in-out !important;
         }
 
@@ -91,6 +92,7 @@
         tr:hover {
             color: white;
             background-color: #ffa500 !important;
+            /*轉場-淡入淡出效果*/
             transition: background-color 0.35s ease-in-out;
         }
 
