--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -164,10 +164,9 @@
                 </li>
 
                 <li class="nav-item"><a href="/missing" class="nav-link">走失協尋</a></li>
-                <li class="nav-item"><a href="/animal_discuss" class="nav-link">交流天地</a></li>
+                <li class="nav-item"><a href="/forum" class="nav-link">交流天地</a></li>
                 <li class="nav-item "><a href="/animal_hospital" class="nav-link">動物醫院</a></li>
                 <li class="nav-item"><a href="/funeral" class="nav-link">寵物送別</a></li>
-                <li class="nav-item"><a href="/forum" class="nav-link">討論區</a></li>
 
                 <!-- 下拉選單 -->
                 <li class="nav-item dropdown">
